[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "msmart-ng"
description = "A Python library for local control of Midea (and associated brands) smart air conditioners."
readme = "README.md"
authors = [
  {name = "Tucker Kern", email = "tuckkern@gmail.com"},
]
requires-python = ">=3.10"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Home Automation"
]
dependencies = [
  "httpx",
  "pycryptodome"
]
dynamic = ["version"]

[project.optional-dependencies]
yaml = ["pyyaml"]

[project.urls]
Repository = "https://github.com/nofuturekid/midea-msmart"
Issues = "https://github.com/nofuturekid/midea-msmart/issues"

[project.scripts]
msmart-ng = "msmart.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["msmart", "msmart.*"]
exclude = ["msmart.tests"]

[tool.setuptools_scm]